--- a/Workflows/Argo-Workflow-Basic-6/versions/0.0.2/workflowTemplate.yaml
+++ b/Workflows/Argo-Workflow-Basic-6/versions/0.0.2/workflowTemplate.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
   name: hello-template
+  annotations:
+    klovercloud-workflow-hub/category: ARGO
 spec:
   entrypoint: main
   templates:
