--- a/Workflows/Argo-Workflow-Basic-2/versions/0.0.7/workflowTemplate.yaml
+++ b/Workflows/Argo-Workflow-Basic-2/versions/0.0.7/workflowTemplate.yaml
@@ -8,7 +8,7 @@ spec:
     - name: main
       inputs:
         parameters:
-          - name: message-updated
+          - name: message-updated-1
             default: "Hello from Workflow Template!"
       container:
         image: alpine:3.14
