--- a/workflow-example/contributors.yaml
+++ b/workflow-example/contributors.yaml
@@ -1,9 +1,9 @@
 contributors:
   - name: Rafid Niloy
     email: rafsnil@gmail.com
-    git_user_name: rafsnil
+    git_username: rafsnil
     git_url: https://github.com/rafsnil
   - name: Rashid Chy
     email: sakinchy82@gmail.com
-    git_user_name: RashidChy
+    git_username: RashidChy
     git_url: https://github.com/rafsnil
