--- a/Workflows/Argo-Workflow-Basic/contributors.yaml
+++ b/Workflows/Argo-Workflow-Basic/contributors.yaml
@@ -3,3 +3,7 @@ contributors:
     email: rafsnil@gmail.com
     git_username: rafsnil
     git_url: https://github.com/rafsnil
+  - name: Rashid Chy
+    email: sakinchy82@gmail.com
+    git_username: RashidChy
+    git_url: https://github.com/rafsnil
